[package]
name = "lr2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "*"
log = "0.4"
pretty_env_logger = "0.4.0"

[[bin]]
name = "sanya"
path = "src/client.rs"

[[bin]]
name = "peter"
path = "src/server.rs"